# Mesh-Gateway-Configurator

./: Manager.py  README.md  app.js  index.html  manifest.json  serial.js  style.css  sw.js  ui.js
main/: CMakeLists.txt  ble_classic_handler.c  idf_component.yml  main.c  modem_mqtt.c  relay_handler.c  usb_cdc.c
main/include/: ble_classic_handler.h  modem_mqtt.h  relay_handler.h  usb_cdc.h
